Fix vert flex alignment for nav search

--- a/themes/shiro/assets/src/sass/components/_nav-search.scss
+++ b/themes/shiro/assets/src/sass/components/_nav-search.scss
@@ -8,6 +8,7 @@
 
 	@media ( min-width: #{$medium-landscape} ) {
 		flex: 0 0 rem( 220 );
+		align-self: flex-start;
 	}
 
 	.search-form__field {
